--- a/3-4-cake.html
+++ b/3-4-cake.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Redirect</title>
+        <title>3, 4 Cake</title>
         <meta http-equiv="Refresh" content="0; url=https://docs.google.com/document/d/1cnpRJi7pD5JiJmMy0_joepevpYcUIuckxVPqnJBy77I/edit?usp=sharing" />
     </head>
     <body>
