--- a/r/3-4-cake.html
+++ b/r/3-4-cake.html
@@ -1,5 +1,6 @@
 ---
 title: 3, 4 Cake
+permalink: r/3-4-cake
 redirect_to:
  - https://docs.google.com/document/d/1cnpRJi7pD5JiJmMy0_joepevpYcUIuckxVPqnJBy77I/edit?usp=sharing
 ---
