Update and rename unum-duo-puls.md to unum-duo-puls.html

--- a/r/unum-duo-puls.html
+++ b/r/unum-duo-puls.html
@@ -1,5 +1,6 @@
 ---
 title: Unum, Duo Puls
+permalink: r/unum-duo-puls
 redirect_to:
  - https://docs.google.com/document/d/1NC9CfaqTiadVmzLmPwXCtnkdJzzKOfVEv1FiJtHbHSM/edit?usp=sharing
 ---
