Fix jekyll-redirect-from front matter

--- a/src/mc-skin/FitzenN/old/apply/alex.html
+++ b/src/mc-skin/FitzenN/old/apply/alex.html
@@ -1,8 +1,8 @@
 ---
 title: Apply FitzenN's skin
-permalinks:
-    specific: '/mc-skin/FitzenN/old/apply/alex'
-    general: '/mc-skin/FitzenN/old/apply'
+permalink: /mc-skin/FitzenN/old/apply/alex
+redirect_from:
+    - /mc-skin/FitzenN/old/apply
 redirect_to:
     - https://www.minecraft.net/en-us/profile/skin/remote?url=https%3A%2F%2Fnfitzen.keybase.pub%2Fmc-skin%2FFitzenN%2Fold%2Falex.png&model=slim
 ---
