--- a/src/mc-skin/FitzenS/old/apply/steve.html
+++ b/src/mc-skin/FitzenS/old/apply/steve.html
@@ -1,8 +1,8 @@
 ---
 title: Apply FitzenS's skin
-permalinks:
-    specific: '/mc-skin/FitzenS/old/apply/steve'
-    general: '/mc-skin/FitzenS/old/apply/'
+permalink: /mc-skin/FitzenS/old/apply/steve
+redirect_from:
+    - /mc-skin/FitzenS/old/apply
 redirect_to:
     - https://www.minecraft.net/en-us/profile/skin/remote?url=https%3A%2F%2Fnfitzen.keybase.pub%2Fmc-skin%2FFitzenS%2Fnew%2Fsteve.png&model=classic
 ---
